<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visited_or_not"/>

    <RadioGroup
        android:id="@+id/visited_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/only_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_visited"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/only_not_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_not_visited"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/visited_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both_visited"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_filter"/>
    <RadioGroup
        android:id="@+id/subject_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/all_subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_subjects"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/only_selected_subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_selected_subject"
            android:checked="false"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/chinese_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Chinese"/>
        <CheckBox
            android:id="@+id/math_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Math"/>
        <CheckBox
            android:id="@+id/english_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/English"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/physics_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Physics"/>
        <CheckBox
            android:id="@+id/chemistry_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Chemistry"/>
        <CheckBox
            android:id="@+id/biology_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Biology"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/politics_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Politics"/>
        <CheckBox
            android:id="@+id/history_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/History"/>
        <CheckBox
            android:id="@+id/geography_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Geometry"/>
    </LinearLayout>

</LinearLayout>