<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_setting"/>
    <RadioGroup
        android:id="@+id/order_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/order_by_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entity_length"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/order_by_dictionary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entity_dictionary"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/not_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_sort"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_method"/>

    <RadioGroup
        android:id="@+id/order_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/positive_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive_order"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/negative_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/negative_order"/>
    </RadioGroup>


</LinearLayout>