<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.example.frontend.ui.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:searchBlockColor="#ffffff"
        app:searchBlockHeight="150"
        app:textColorSearch="#9b9b9b"
        app:textHintSearch="@string/search_hint"
        app:textSizeSearch="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/search_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:text="@string/select_setting"/>

        <Button
            android:id="@+id/search_order_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="30dp"
            android:text="@string/order_setting"
            />

        <ImageButton
            android:id="@+id/search_refresh_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/refresh"
            android:scaleType="fitCenter"
            android:src="@drawable/refresh" />


    </LinearLayout>

    <ListView
        android:id="@+id/search_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
    </ListView>


</LinearLayout>